# autonomous_nav

./: CMakeLists.txt  README.md  package.xml
config/: yolo_params.yaml
launch/: navigation.launch  object_detection.launch
scripts/: navigation_manager.py  obstacle_avoidance_node.py  yolo_detection_node.py
