<?xml version="1.0"?>
<package format="2">
  <name>autonomous_nav</name>
  <version>0.1.0</version>
  <description>Autonomous navigation with YOLO object detection and obstacle avoidance</description>

  <maintainer email="mollahmdsaif@gmail.com">Mollah Md Saif</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>torchvision</exec_depend>
</package>